--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <a href="#" class="btn">order now</a>
       </div>
       <div class="image">
-        <img src="/images/home-img.png" alt="" />
+        <img src="images/home-img.png" alt="" />
       </div>
     </section>
     <!--home section ends-->
@@ -50,9 +50,9 @@
       <h1 class="heading">Our <span>speciality</span></h1>
       <div class="box-container">
         <div class="box">
-          <img class="image" src="/images/s-img-1.jpg" alt="" />
+          <img class="image" src="images/s-img-1.jpg" alt="" />
           <div class="content">
-            <img src="/images/s-1.png" alt="" />
+            <img src="images/s-1.png" alt="" />
             <h3>tasty burger</h3>
             <p>
               Lorem ipsum dolor sit amet consectetur adipisicing elit.
@@ -62,9 +62,9 @@
           </div>
         </div>
         <div class="box">
-          <img class="image" src="/images/s-img-2.jpg" alt="" />
+          <img class="image" src="images/s-img-2.jpg" alt="" />
           <div class="content">
-            <img src="/images/s-2.png" alt="" />
+            <img src="images/s-2.png" alt="" />
             <h3>tasty pizza</h3>
             <p>
               Lorem ipsum dolor sit amet consectetur adipisicing elit.
@@ -74,9 +74,9 @@
           </div>
         </div>
         <div class="box">
-          <img class="image" src="/images/s-img-3.jpg" alt="" />
+          <img class="image" src="images/s-img-3.jpg" alt="" />
           <div class="content">
-            <img src="/images/s-3.png" alt="" />
+            <img src="images/s-3.png" alt="" />
             <h3>cold ice-cream</h3>
             <p>
               Lorem ipsum dolor sit amet consectetur adipisicing elit.
@@ -87,9 +87,9 @@
         </div>
 
         <div class="box">
-          <img class="image" src="/images/s-img-4.jpg" alt="" />
+          <img class="image" src="images/s-img-4.jpg" alt="" />
           <div class="content">
-            <img src="/images/s-4.png" alt="" />
+            <img src="images/s-4.png" alt="" />
             <h3>cold drinks</h3>
             <p>
               Lorem ipsum dolor sit amet consectetur adipisicing elit.
@@ -100,9 +100,9 @@
         </div>
 
         <div class="box">
-          <img class="image" src="/images/s-img-5.jpg" alt="" />
+          <img class="image" src="images/s-img-5.jpg" alt="" />
           <div class="content">
-            <img src="/images/s-5.png" alt="" />
+            <img src="images/s-5.png" alt="" />
             <h3>tasty sweets</h3>
             <p>
               Lorem ipsum dolor sit amet consectetur adipisicing elit.
@@ -113,9 +113,9 @@
         </div>
 
         <div class="box">
-          <img class="image" src="/images/s-img-6.jpg" alt="" />
+          <img class="image" src="images/s-img-6.jpg" alt="" />
           <div class="content">
-            <img src="/images/s-6.png" alt="" />
+            <img src="images/s-6.png" alt="" />
             <h3>healty breakfast</h3>
             <p>
               Lorem ipsum dolor sit amet consectetur adipisicing elit.
@@ -133,7 +133,7 @@
       <div class="box-container">
         <div class="box">
           <span class="price">$5 - $20</span>
-          <img src="/images/p-1.jpg" alt="" />
+          <img src="images/p-1.jpg" alt="" />
           <h3>teasty burger</h3>
           <div class="stars">
             <i class="fas fa-star"></i>
@@ -147,7 +147,7 @@
 
         <div class="box">
           <span class="price">$5 - $20</span>
-          <img src="/images/p-2.jpg" alt="" />
+          <img src="images/p-2.jpg" alt="" />
           <h3>teasty cakes</h3>
           <div class="stars">
             <i class="fas fa-star"></i>
@@ -161,7 +161,7 @@
 
         <div class="box">
           <span class="price">$5 - $20</span>
-          <img src="/images/p-3.jpg" alt="" />
+          <img src="images/p-3.jpg" alt="" />
           <h3>teasty sweets</h3>
           <div class="stars">
             <i class="fas fa-star"></i>
@@ -175,7 +175,7 @@
 
         <div class="box">
           <span class="price">$5 - $20</span>
-          <img src="/images/p-4.jpg" alt="" />
+          <img src="images/p-4.jpg" alt="" />
           <h3>teasty cupcakes</h3>
           <div class="stars">
             <i class="fas fa-star"></i>
@@ -189,7 +189,7 @@
 
         <div class="box">
           <span class="price">$5 - $20</span>
-          <img src="/images/p-5.jpg" alt="" />
+          <img src="images/p-5.jpg" alt="" />
           <h3>cold drinks</h3>
           <div class="stars">
             <i class="fas fa-star"></i>
@@ -203,7 +203,7 @@
 
         <div class="box">
           <span class="price">$5 - $20</span>
-          <img src="/images/p-6.jpg" alt="" />
+          <img src="images/p-6.jpg" alt="" />
           <h3>cold ice-creams</h3>
           <div class="stars">
             <i class="fas fa-star"></i>
@@ -220,19 +220,19 @@
     <!--steps section starts-->
     <section class="steps">
       <div class="box">
-        <img src="/images/step-1.jpg" alt="" />
+        <img src="images/step-1.jpg" alt="" />
         <h3>choose your favorite food</h3>
       </div>
       <div class="box">
-        <img src="/images/step-2.jpg" alt="" />
+        <img src="images/step-2.jpg" alt="" />
         <h3>free and fast delivery</h3>
       </div>
       <div class="box">
-        <img src="/images/step-3.jpg" alt="" />
+        <img src="images/step-3.jpg" alt="" />
         <h3>easy payments methods</h3>
       </div>
       <div class="box">
-        <img src="/images/step-4.jpg" alt="" />
+        <img src="images/step-4.jpg" alt="" />
         <h3>and fainally,enjoy your food</h3>
       </div>
     </section>
@@ -242,7 +242,7 @@
       <h1 class="heading">Our <span>food </span>Gallery</h1>
       <div class="box-container">
         <div class="box">
-          <img src="/images/g-1.jpg" alt="" />
+          <img src="images/g-1.jpg" alt="" />
           <div class="content">
             <h3>teasty food</h3>
             <p>
@@ -254,7 +254,7 @@
         </div>
 
         <div class="box">
-          <img src="/images/g-2.jpg" alt="" />
+          <img src="images/g-2.jpg" alt="" />
           <div class="content">
             <h3>teasty food</h3>
             <p>
@@ -266,7 +266,7 @@
         </div>
 
         <div class="box">
-          <img src="/images/g-3.jpg" alt="" />
+          <img src="images/g-3.jpg" alt="" />
           <div class="content">
             <h3>teasty food</h3>
             <p>
@@ -278,7 +278,7 @@
         </div>
 
         <div class="box">
-          <img src="/images/g-4.jpg" alt="" />
+          <img src="images/g-4.jpg" alt="" />
           <div class="content">
             <h3>teasty food</h3>
             <p>
@@ -290,7 +290,7 @@
         </div>
 
         <div class="box">
-          <img src="/images/g-5.jpg" alt="" />
+          <img src="images/g-5.jpg" alt="" />
           <div class="content">
             <h3>teasty food</h3>
             <p>
@@ -302,7 +302,7 @@
         </div>
 
         <div class="box">
-          <img src="/images/g-6.jpg" alt="" />
+          <img src="images/g-6.jpg" alt="" />
           <div class="content">
             <h3>teasty food</h3>
             <p>
@@ -314,7 +314,7 @@
         </div>
 
         <div class="box">
-          <img src="/images/g-7.jpg" alt="" />
+          <img src="images/g-7.jpg" alt="" />
           <div class="content">
             <h3>teasty food</h3>
             <p>
@@ -326,7 +326,7 @@
         </div>
 
         <div class="box">
-          <img src="/images/g-8.jpg" alt="" />
+          <img src="images/g-8.jpg" alt="" />
           <div class="content">
             <h3>teasty food</h3>
             <p>
@@ -338,7 +338,7 @@
         </div>
 
         <div class="box">
-          <img src="/images/g-9.jpg" alt="" />
+          <img src="images/g-9.jpg" alt="" />
           <div class="content">
             <h3>teasty food</h3>
             <p>
@@ -356,7 +356,7 @@
       <h1 class="heading">Our <span> customers</span> reviews</h1>
       <div class="box-container">
         <div class="box">
-          <img src="/images/pic1.png" alt="" />
+          <img src="images/pic1.png" alt="" />
           <h3>john deo</h3>
           <div class="stars">
             <i class="fas fa-star"></i>
@@ -373,7 +373,7 @@
         </div>
 
         <div class="box">
-          <img src="/images/pic2.png" alt="" />
+          <img src="images/pic2.png" alt="" />
           <h3>john deo</h3>
           <div class="stars">
             <i class="fas fa-star"></i>
@@ -390,7 +390,7 @@
         </div>
 
         <div class="box">
-          <img src="/images/pic3.png" alt="" />
+          <img src="images/pic3.png" alt="" />
           <h3>john deo</h3>
           <div class="stars">
             <i class="fas fa-star"></i>
@@ -461,7 +461,7 @@
     <a href="#home" class="fas fa-angle-up" id="scroll-top"></a>
     <!--loader-->
     <div class="loader-container">
-      <img src="/images/loader.gif" alt="" />
+      <img src="images/loader.gif" alt="" />
     </div>
 
     <!--custom js-->
