--- a/index.html
+++ b/index.html
@@ -453,7 +453,7 @@
         <a href="#" class="btn">linkedin</a>
       </div>
       <h1 class="credit">
-        Created by<span> mrs. web designer </span>all rights reserved!
+        Created by<span> mis. web designer </span>all rights reserved!
       </h1>
     </section>
     <!-- footer section ends -->
